force-app/main/default/objects/ShipmentRequest__c/ShipmentRequest__c.object-meta.xml
<CustomObject>
    <description>Used to represent a shipment request to be reviewed by an agent</description>
    <label>Shipment Request</label>
    <nameField>
        <displayFormat>S REQ-{0000}</displayFormat>
        <label>ShipmentRequest  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>