force-app/main/default/objects/ShipmentRequest__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Name of the carrier</description>
    <label>Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>