force-app/main/default/objects/ShipmentRequest__c/fields/ShipmentRequest_Id__c.field-meta.xml
<CustomField>
    <fullName>ShipmentRequest_Id__c</fullName>
    <description>External Id for the shipment request</description>
    <externalId>true</externalId>
    <label>ShipmentRequest  Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>