force-app/main/default/objects/ShipmentRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to Agent</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Ready for Dispatch</fullName>
            </value>
            <value>
                <fullName>Dispatch Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>