force-app/main/default/objects/ShipmentRequest__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <description>Tracking ID for the shipment</description>
    <label>Tracking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>